fix images too wide for mobile

--- a/site.css
+++ b/site.css
@@ -4,8 +4,10 @@
 
 .carousel {
   display: inline-block;
-  width: 70vh;
-  height: 70vh;
+  width: 60vw;
+  max-width: 600px;
+  height: auto;
+
 }
 
 #mapid {
@@ -21,6 +23,7 @@
 .text-box {
   display: inline-block;
   width: 70%;
+  max-width: 750px;
 }
 
 .section {
